# libhiae

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.zig
.github/workflows/: cmake-multi-platform.yml
cmake/: hiae-config.cmake.in
hiae-cli/: CMakeLists.txt  README.md  test2.enc  test_cli_simple  test_cli_simple2  test_stream
hiae-cli/src/: file_ops.c  file_ops.h  getopt_win32.c  hiae.c  key_utils.c  key_utils.h  platform.c  platform.h
include/: HiAE.h  HiAEt.h  HiAEx2.h  HiAEx4.h
lib/: HiAE.c  HiAE_aesni.c  HiAE_arm.c  HiAE_arm_sha3.c  HiAE_internal.h  HiAE_software.c  HiAE_vaes_avx512.c
scripts/: amalgamate.py
src/hiae/: HiAE.c  HiAE_aesni.c  HiAE_arm.c  HiAE_arm_sha3.c  HiAE_internal.h  HiAE_software.c  HiAE_stream.c  HiAE_vaes_avx512.c  softaes.h
src/hiaet/: HiAEt.c  HiAEt_aesni.c  HiAEt_arm_sha3.c  HiAEt_arm_sha3_old.c  HiAEt_internal.h  HiAEt_software.c  HiAEt_vaes_avx512.c  softaes.h
src/hiaex2/: HiAEx2.c  HiAEx2_aesni_avx.c  HiAEx2_arm.c  HiAEx2_arm_sha3.c  HiAEx2_internal.h  HiAEx2_software.c  HiAEx2_stream.c  HiAEx2_vaes_avx2.c  softaes.h
src/hiaex4/: HiAEx4.c  HiAEx4_arm.c  HiAEx4_arm_sha3.c  HiAEx4_internal.h  HiAEx4_software.c  HiAEx4_stream.c  HiAEx4_vaes_avx512.c  softaes.h
test/: CMakeLists.txt  function_test.c  hiaet_function_test.c  hiaet_performance_test.c  performance_test.c  performance_x2_test.c  performance_x4_test.c  test_amalgamated.c  test_stream.c  test_vectors_hiaex2.c  test_vectors_ietf.c  timing.h
